<!--
  ~ /**
  ~  * MIT License
  ~  * Copyright (c) 2021 Antoine Mairet
  ~  * Last modified 01/01/21 21:10
  ~  */
  -->

<resources>
    <string name="app_name">MobileProject4A</string>


    <string name="login">Login</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
</resources>